--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,25 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         FlatFile-DataStore
-version:      0.10
-version_from: lib/FlatFile/DataStore.pm
-installdirs:  site
+--- #YAML:1.0
+name:               FlatFile-DataStore
+version:            0.11
+abstract:           Perl module that implements a flat file data
+author:
+    - Brad Baxter <bbaxter@cpan.org>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Data::Omap:                    0.06
-    Math::Int2Base:                0.03
-    URI:                           1.35
-    URI::Escape:                   1.35
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    Data::Omap:      0.06
+    Math::Int2Base:  0.03
+    URI:             1.35
+    URI::Escape:     1.35
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
