--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:               FlatFile-DataStore
-version:            1.00
-abstract:           Perl module that implements a flat file data
+version:            1.01
+abstract:           Perl module that implements a flatfile
 author:
     - Brad Baxter <bbaxter@cpan.org>
 license:            unknown
